Updated issue that was causing background color to be cut off at certain componets. Issue has been resolved

--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -1,7 +1,7 @@
-main {
+/* main {
   background-color: #F2F3F9; 
   height: 100vh; 
-}
+} */
 
 header {
   display: flex; 
